--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -55,6 +55,7 @@ body {
     cursor: pointer;
     margin-left: 1rem;
     left: 0;
+    font-size: 16px;
     transition: transform ease-in-out 0.2s;
   }
 }
