--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,6 +1,6 @@
 $primary-color: lightblue;
-
 $table-breakpoint: 480px;
+$portfolio-bar-height: 50px;
 
 @font-face {
   font-family: "B-Nazanin";
@@ -140,6 +140,79 @@ body {
 .recharts-wrapper{
   margin: auto;
 }
+
+// portfolio
+.portfolio{
+  padding: 2rem;
+  background-color: navy;
+  margin: 50px auto;
+  width: 80%;
+  border-radius: 20px;
+}
+
+.portfolio__quota-bar {
+  display: flex;
+  direction: ltr;
+
+  .quota{
+      position: relative;
+      height: $portfolio-bar-height;
+      margin-left: .5rem;
+      text-align: center;
+      line-height: $portfolio-bar-height;
+
+      &:first-child{
+        margin-left: 0;
+      }
+
+      &:last-child:after{
+        display: none;
+      }
+
+      &:first-child:before{
+        display:none;
+      }
+
+      &:after{
+      content: "";
+      position: absolute;
+      top: 0;
+      right: -$portfolio-bar-height/2;
+      border-radius: 100%;
+      height: 100%;
+      width: $portfolio-bar-height;
+      background-color: white;
+      }
+
+      &:before{
+      content: "";
+      position: absolute;
+      top: 0;
+      left: -$portfolio-bar-height/2;
+      width: $portfolio-bar-height;
+      height: 100%;
+      border-radius: 100px;
+
+      background-color: inherit;
+      }
+  }
+}
+
+.portfolio__operations{
+  margin-top: 30px;
+  .link{
+    padding:1rem;
+    background-color: aqua;
+    border-radius: 10px;
+    cursor: pointer;
+    text-decoration: none;
+    color:black;
+  }
+  
+}
+
+
+
 
 // responsive table
 .table {
