--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -2,6 +2,8 @@ $primary-color: lightblue;
 $table-breakpoint: 480px;
 $portfolio-bar-height: 50px;
 $large-screen-breakpoint: 1200px;
+$empty-container-head-color:#d8d8d8;
+$empty-container-add-btn-color:#074b83;
 
 @font-face {
   font-family: "B-Nazanin";
@@ -24,27 +26,26 @@ body {
   width: 90%;
   max-width: 1000px;
   margin: 0 auto;
-
+  cursor: pointer;
+  
   .table-container__head {
-    background: $primary-color;
     display: flex;
     position: relative;
-    cursor: pointer;
+    background: $primary-color;
     justify-content: space-between;
     padding: 0.2rem 1rem;
     align-items: center;
     text-align: center;
     width: 100%;
     height: 40px;
+    
     border-radius: 10px;
-
     font-size: 1rem;
 
     .value-info {
       margin-right: 10px;
-    }
+    }    
   }
-
   .buttons {
     display: flex;
     justify-content: center;
@@ -94,6 +95,24 @@ body {
     left: 0;
     font-size: 16px;
     transition: transform ease-in-out 0.2s;
+  }
+}
+
+.table-container.empty{
+  cursor:default;
+  
+
+  .table-container__head{
+    background-color: $empty-container-head-color;
+  }
+
+  .toggle-btn{
+    display: none;
+  }
+
+  .add-btn{
+    color:$empty-container-add-btn-color;
+    
   }
 }
 
