--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -2,6 +2,7 @@ $table-breakpoint: 480px;
 $portfolio-bar-height: 50px;
 $large-screen-breakpoint: 1200px;
 $empty-container-add-btn-color:#074b83;
+$footer-height: 50px;
 
 // reset
 *{
@@ -43,8 +44,8 @@ body {
   font-size: 1.2rem;
   background-color: var(--background-color);
   color:var(--text-color);
-
   transition: background-color .15s linear;
+  margin-bottom: $footer-height + 10px;
 }
 
 a{
@@ -107,7 +108,7 @@ option{
   .table {
     width: 100%;
     max-height: 0;
-    overflow-y: hidden;
+    overflow-y: auto;
     transition: max-height 0.2s ease-out;
     border-radius: 10px;
     
@@ -393,7 +394,7 @@ option{
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 50px;
+  height: $footer-height;
   background-color: var(--primary-color);
   text-align: center;
   z-index: 999;
