--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -356,67 +356,76 @@ option{
   margin: 50px auto;
   width: 80%;
   border-radius: 20px;
-}
+  color:black;
 
-.portfolio__quota-bar {
-  display: flex;
-  direction: ltr;
+  .empty-note{
+    margin:0 auto;
+    color: whitesmoke;
+  }
 
-  .quota{
-      position: relative;
-      height: $portfolio-bar-height;
-      margin-left: .5rem;
-      text-align: center;
-      line-height: $portfolio-bar-height;
-
-      &:first-child{
-        margin-left: 0;
-      }
-
-      &:last-child:after{
-        display: none;
-      }
-
-      &:first-child:before{
-        display:none;
-      }
-
-      &:after{
-      content: "";
-      position: absolute;
-      top: 0;
-      right: -$portfolio-bar-height/2;
-      border-radius: 100%;
-      height: 100%;
-      width: $portfolio-bar-height;
-      background-color: white;
-      }
-
-      &:before{
-      content: "";
-      position: absolute;
-      top: 0;
-      left: -$portfolio-bar-height/2;
-      width: $portfolio-bar-height;
-      height: 100%;
-      border-radius: 100px;
-
-      background-color: inherit;
-      }
+  &__quota-bar {
+    display: flex;
+    direction: ltr;
+  
+    .quota{
+        position: relative;
+        height: $portfolio-bar-height;
+        margin-left: .5rem;
+        text-align: center;
+        line-height: $portfolio-bar-height;
+  
+        &:first-child{
+          margin-left: 0;
+        }
+  
+        &:last-child:after{
+          display: none;
+        }
+  
+        &:first-child:before{
+          display:none;
+        }
+  
+        &:after{
+        content: "";
+        position: absolute;
+        top: 0;
+        right: -$portfolio-bar-height/2;
+        border-radius: 100%;
+        height: 100%;
+        width: $portfolio-bar-height;
+        background-color: white;
+        }
+  
+        &:before{
+        content: "";
+        position: absolute;
+        top: 0;
+        left: -$portfolio-bar-height/2;
+        width: $portfolio-bar-height;
+        height: 100%;
+        border-radius: 100px;
+  
+        background-color: inherit;
+        }
+    }
   }
 }
 
+
 .portfolio-details{
   margin-top: 40px;
-  
 }
 
 .portfolio__operations{
+  display: flex;
+  justify-content: center;
   margin-top: 30px;
+  
   .link{
-    padding:1rem;
+    padding:5px 10px;
     background-color: aqua;
-    border-radius: 10px;
+    border-radius: 5px;
     cursor: pointer;
     text-decoration: none;
     color:black;
