--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -150,9 +150,13 @@ option{
   }
 }
 
+  &.dynamic .table{
+    max-height: 0;
+  }
+  
   .table {
     width: 100%;
-    max-height: 0;
+    
     overflow-y: auto;
     transition: max-height 0.2s ease-out;
     border-radius: 10px;
@@ -248,31 +252,6 @@ option{
 
 .date-range{
   display: flex;
-}
-
-.asset-detail{
-  width: 90%;
-  max-width: 1000px;
-  margin: 20px auto;
-  border-radius: 10px;
-  color: var(--text-color);
-  overflow-x: scroll;
-
-  &__header {
-      padding: 10px;
-      border-top-right-radius: 10px;
-      border-top-left-radius: 10px;
-      background-color: var(--primary-color); 
-      color: var(--text-color);
-    .label {
-      margin-left: 10px;
-    }
-  }
-  
-  &__body{
-    background-color: var(--secondary-color);
-    color: var(--text-color);
-  }
 }
 
 .styled-value {
