Refactor: sass files organization

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,273 +1,6 @@
-$table-breakpoint: 480px;
-$portfolio-bar-height: 50px;
-$large-screen-breakpoint: 1200px;
-$empty-container-add-btn-color:#074b83;
-$footer-height: 35px;
+@use './sass/abatracts' as *;
+@use './sass/base' as *;
 
-// reset
-*{
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-// Light mode
-html{
-  --background-color: white;
-  --text-color:black;
-  --navbar-bg-color:#0077b6;
-  --primary-color:lightblue;
-  --secondary-color:white;
-  --empty-container-head-color:#d8d8d8;
-}
-
-// Dark mode 
-html[theme="dark"]{
-  --background-color: #121212;
-  --text-color:#0abca9;
-  --navbar-bg-color:#1e1f26;
-  --primary-color:#282a35;
-  --secondary-color:#2c303a;
-  --empty-container-head-color:#2d2d2d;
-}
-
-// Fonts
-@font-face {
-  font-family: "B-Nazanin";
-  src: local("B-Nazanin"), url(./fonts/b-nazanin-regular.ttf) format("truetype");
-}
-
-// General
-body {
-  font-family: B-nazanin;
-  font-weight: 500;
-  font-size: 1.2rem;
-  background-color: var(--background-color);
-  color:var(--text-color);
-  transition: background-color .15s linear;
-  margin-bottom: $footer-height + 10px;
-}
-
-a{
-  text-decoration: none;
-}
-
-select{
-  color: var(--text-color);
-}
-
-option{
-  background-color: var(--primary-color);
-}
-
-
-.btn{
-  svg{
-    vertical-align: sub;
-  }
-}
-
-// Toast messages
-.Toastify__toast{
-  color: white;
-  font-size: 1rem;
-  &--success{
-    background-color: #7DB46CFF;
-  }
-  &--info{
-    background-color: #54c7ec;
-
-  }
-}
-
-
-//scrollbar
-/* width */
-::-webkit-scrollbar {
-  width: 5px;
-  height: 7px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: var(--background-color);
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: var(--primary-color);
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
-
-.navbar{
-  background-color: var(--navbar-bg-color);
-  .navbar-brand{
-    color: var(--text-color);
-  }
-}
-
-.log-buttons .btn {
-  margin: 0 .5rem;
-  width: 75px;
-}
-
-.table{
-  color: var(--text-color);
-  background-color: var(--secondary-color);
-
-  td.operations{
-    button{
-      margin:0 20px;
-    }
-  }
-
-  td,tr,tbody{
-    border-bottom-width:0 !important;
-    border-top:0 !important;
-  }
-}
-
-// Table container
-.table-container {
-  width: 90%;
-  max-width: 1000px;
-  margin: 0 auto;
-  cursor: pointer;
-  margin-bottom: 14px;
-
-  &.empty{
-    cursor:default;
-
-  .table-container__head{
-    background-color: var(--empty-container-head-color);
-  }
-
-  .toggle-btn{
-    display: none;
-  }
-
-  .add-btn{
-    color:$empty-container-add-btn-color;
-  }
-}
-
-  &.dynamic .table{
-    max-height: 0;
-  }
-  
-  .table {
-    width: 100%;
-    
-    overflow-y: auto;
-    transition: max-height 0.2s ease-out;
-    border-radius: 10px;
-  }
-  
-  .add-btn{
-    color:var(--text-color);
-  }
-  .toggle-btn {
-    position: absolute;
-    cursor: pointer;
-    margin-left: 1rem;
-    left: 0;
-    font-size: 16px;
-    transition: transform ease-in-out 0.2s;
-  }
-
-  
-
-  &__head {
-    display: flex;
-    position: relative;
-    background: var(--primary-color);
-    justify-content: space-between;
-    padding: 0.2rem 1rem;
-    align-items: center;
-    text-align: center;
-    width: 100%;
-    height: 40px;
-    
-    border-radius: 10px;
-    font-size: .95rem;
-  
-    .buttons {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 80px;
-  
-      a,span,svg{
-        vertical-align: sub;
-      }
-    }
-  
-    .value-info {
-      margin-right: 10px;
-    }
-    
-    &.active{
-      .toggle-btn{
-        transform: rotate(180deg);
-      }
-      border-bottom-left-radius: 0;
-      border-bottom-right-radius: 0;
-    }
-    &.active+.table{
-      border-top-left-radius: 0;
-        border-top-right-radius: 0;
-    }  
-
-  }
-
-}
-
-.container__head--info {
-  // width:350px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-
-  .title{
-    width: 50px;
-    white-space: nowrap;
-    text-align: right;
-    color: var(--text-color);
-  }
-}
-
-.history-info {
-  .styled-value {
-    display: flex;
-    justify-content: flex-start;
-  }
-}
-
-.filter-bar{
-  display: flex;
-  
-  .filter{
-    margin-left:25px;
-  }
-}
-
-.date-range{
-  display: flex;
-}
-
-.styled-value {
-  span {
-    margin-left: 5px;
-  }
-
-  span,svg{
-    vertical-align: sub;
-  }
-}
 
 .add-form {
   margin: 5rem auto;
@@ -297,208 +30,10 @@ option{
   }
 }
 
-//toggle switch
-.toggle-switch{
-  position: relative;
-  width: 40px;
-  height: 20px;
-  background-color: white;
-  border-radius: 30px;
-  cursor:pointer;
-  
-  
-  &:after{
-    content:'';
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    background-color: black;
-    border-radius: 10px;
-    left:0;
-    top: 0;
-    bottom: 0;
-    transition: .4s; 
-  }
-  
-  &.active:after{
-    transform: translate(100%);
-  }
-}
-
-//chart
-.charts{
-  display: flex;
-  padding: 40px 0;
-  flex-flow: column wrap;
-  width: 90%;
-  justify-content: center;
-  margin:0 auto;
-  background-color: var(--primary-color);
-  border-radius: 10px;
-  overflow-x: auto;
-}
-
-.chart-empty-message{
-  margin: 0 auto;
-  text-align: center;
-}
-
-.chartWrapper {
-  overflow-x: auto;
-  margin:auto 0; 
-}
-
-.recharts-wrapper{
-  margin: auto;
-}
-
-// portfolio
-.portfolio{
-  padding: 2rem;
-  background-color: navy;
-  margin: 50px auto;
-  width: 80%;
-  border-radius: 20px;
-  color:black;
-
-  .empty-note{
-    margin:0 auto;
-    color: whitesmoke;
-  }
-
-  &__quota-bar {
-    display: flex;
-    direction: ltr;
-  
-    .quota{
-        position: relative;
-        height: $portfolio-bar-height;
-        margin-left: .5rem;
-        text-align: center;
-        line-height: $portfolio-bar-height;
-  
-        &:first-child{
-          margin-left: 0;
-          &:before{
-            display:none;
-          }
-        }
-  
-        &:last-child{
-          &:after{
-            display:none;
-          }
-        }
-
-        &:before,&:after{
-          content: "";
-          position: absolute;
-          top: 0;
-          border-radius: 100%;
-          height: 100%;
-          width: $portfolio-bar-height;
-
-        }
-  
-        &:after{
-          right: -$portfolio-bar-height/2;
-          background-color: white;
-        }
-  
-        &:before{          
-          left: -$portfolio-bar-height/2;
-          background-color: inherit;
-        }
-    }
-  }
-}
-
-
 .portfolio-details{
   margin-top: 40px;
 }
 
-.portfolio__operations{
-  display: flex;
-  justify-content: center;
-  margin-top: 30px;
-  
-  .link{
-    padding:5px 10px;
-    background-color: aqua;
-    border-radius: 5px;
-    cursor: pointer;
-    text-decoration: none;
-    color:black;
-  }
-  
-}
-
-//footer
-.footer{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: $footer-height;
-  background-color: var(--primary-color);
-  text-align: center;
-  z-index: 999;
-}
-
-.footer-text{
-  margin:0;
-}
-
-
-//modal
-.modal-content{
-  background-color: var(--primary-color);
-}
-
-// responsive table
-.table-wrapper{
-  border:none !important;
-}
-.table {
-  overflow-x: auto;
-  
-  th,
-  td {
-    text-align: right;
-    white-space: nowrap;
-    vertical-align: sub;
-  }
-
-  th {
-    display: none;
-  }
-
-  td {
-    display: block;
-
-    &.row-number{
-      width: 50px;
-    }
-
-    &:first-child {
-      background-color: var(--primary-color);
-    }
-
-    &:last-child {
-      border-bottom: 1px solid grey;
-    }
-
-    &:before {
-      content: attr(data-th) ": ";
-      font-weight: bold;
-      width: 6.5em;
-      display: inline-block;
-    }
-  }
-}
 
 @media (min-width: $table-breakpoint) {
   .table-container {
