--- a/client/src/components/forms/authForm.scss
+++ b/client/src/components/forms/authForm.scss
@@ -1,10 +1,4 @@
-$authPageBackground: aqua;
-
-//authForm
-$authFormBackground: white;
-$authFormMaxWidth: 600px;
-$authFormPadding: 30px;
-
+@use '../../sass/abatracts/' as *; 
 .authPage {
     padding-top: 40px;
     height: 100vh;
@@ -55,10 +49,6 @@ $authFormPadding: 30px;
     .foot-item{
         margin-top: 10px;
     }
-}
-
-.loginForm{
-
 }
 
 
