Refactor: organize folders put component file and style file in one folder

--- a/client/src/components/forms/authForm/authForm.scss
+++ b/client/src/components/forms/authForm/authForm.scss
@@ -1,4 +1,4 @@
-@use '../../sass/abatracts/' as *; 
+@use '../../../sass/abatracts/' as *; 
 .authPage {
     padding-top: 40px;
     height: 100vh;
