--- a/client/src/components/charts/charts.scss
+++ b/client/src/components/charts/charts.scss
@@ -11,6 +11,7 @@
     background-color: var(--primary-color);
     border-radius: 10px;
     overflow-x: auto;
+    max-width: 1000px;
   }
   
   .chart-empty-message{
